changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

Updated the INSTALL directions.  MSW 6/16/2000

Modified the editor to make certain objects (teleporters, creators,
markers) more easily editable.  --PeterM 6/16/2000

Modifed how firewalls worked.  They can now be triggered by
handles as well as turned.  Ones which are turned by handles
cannot be triggered by handles.  PeterM 6/15/2000

fixes to random_maps:
exit.c:  won't crash if named final_map doesn't exist
room_gen_onion.c:  reordered the options more sanely
special.c:  fixed a crash-bug:  nuke_map would nuke parts of monsters, but
not the whole monster.  --PeterM

server/skill_util.c:  Fix type in change_skill - was doing an == operation
when it should just have been an =.  MSW 6/13/2000

common/anim.c:  animation_object() - return if object does not have a valid
animation after logging error.  Before, we logged the error and would
promptly crash.  MSW 6/13/2000

server/apply.c: apply_treasure():  Bugfix: Set FLAG_NO_APPLY before
moving object to the top.  - Jan Echternach 6/13/2000

server/time.c: move_marker():  Bugfix: Call update_ob_speed() after
changing force->speed.  - Jan Echternach 6/13/2000

server/spell_util.c: move_swarm_spell():  Improved distribution of
fired objects.  Fixed starting position of fired objects to be able to
hit targets immediately in front the caster.  - Patch by Jeffrey Hantin,
applied by Jan Echternach 6/13/2000

server/disease.c, sproto.h, rune.c   Fixes from jhantin@derringer.net for diseases:
   Reversed strstr calls, force argument added to infect_object,
diseases in immune carrier last forever, needles use infect object,